--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv-safe": "^8.2.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
