--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3"
   },
